--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,12 @@
         "ejs": "~2.6.1",
         "express": "~4.16.1",
         "http-errors": "~1.6.3",
-        "morgan": "~1.9.1"
+        "jwt-simple": "^0.5.6",
+        "md5": "^2.3.0",
+        "morgan": "~1.9.1",
+        "mysql": "^2.18.1"
+    },
+    "devDependencies": {
+        "cors": "^2.8.5"
     }
 }
